Full structure, adding styling

--- a/index.html
+++ b/index.html
@@ -3,56 +3,76 @@
 <head>
     <title>John E Pierce, Speech Pathologist & Researcher</title>
     <link rel="stylesheet" href="index.css">
+    <link href='https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700;800&display=swap' rel='stylesheet'>
+    <script src="index.js" defer></script>
     <meta charset="UTF-8">
     <meta name="description" content="Dr John E Pierce, speech pathologist and researcher"
 </head>
 <body>
-    <img alt="Profile photograph of John Pierce" src="images/profile.jpg" id="profileimg"/>
-
-    <a href="www.twitter.com/johnpierce85" >
-        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
-            <path d="M5.026 15c6.038 0 9.341-5.003 9.341-9.334 0-.14 0-.282-.006-.422A6.685 6.685 0 0 0 16 3.542a6.658 6.658 0 0 1-1.889.518 3.301 3.301 0 0 0 1.447-1.817 6.533 6.533 0 0 1-2.087.793A3.286 3.286 0 0 0 7.875 6.03a9.325 9.325 0 0 1-6.767-3.429 3.289 3.289 0 0 0 1.018 4.382A3.323 3.323 0 0 1 .64 6.575v.045a3.288 3.288 0 0 0 2.632 3.218 3.203 3.203 0 0 1-.865.115 3.23 3.23 0 0 1-.614-.057 3.283 3.283 0 0 0 3.067 2.277A6.588 6.588 0 0 1 .78 13.58a6.32 6.32 0 0 1-.78-.045A9.344 9.344 0 0 0 5.026 15z"/>
-        </svg>
-    </a>
-    <a href="https://www.youtube.com/@johnepierce">
-        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-youtube" viewBox="0 0 16 16">
-            <path d="M8.051 1.999h.089c.822.003 4.987.033 6.11.335a2.01 2.01 0 0 1 1.415 1.42c.101.38.172.883.22 1.402l.01.104.022.26.008.104c.065.914.073 1.77.074 1.957v.075c-.001.194-.01 1.108-.082 2.06l-.008.105-.009.104c-.05.572-.124 1.14-.235 1.558a2.007 2.007 0 0 1-1.415 1.42c-1.16.312-5.569.334-6.18.335h-.142c-.309 0-1.587-.006-2.927-.052l-.17-.006-.087-.004-.171-.007-.171-.007c-1.11-.049-2.167-.128-2.654-.26a2.007 2.007 0 0 1-1.415-1.419c-.111-.417-.185-.986-.235-1.558L.09 9.82l-.008-.104A31.4 31.4 0 0 1 0 7.68v-.123c.002-.215.01-.958.064-1.778l.007-.103.003-.052.008-.104.022-.26.01-.104c.048-.519.119-1.023.22-1.402a2.007 2.007 0 0 1 1.415-1.42c.487-.13 1.544-.21 2.654-.26l.17-.007.172-.006.086-.003.171-.007A99.788 99.788 0 0 1 7.858 2h.193zM6.4 5.209v4.818l4.157-2.408L6.4 5.209z"/>
-          </svg>
-    </a>
-    <a href="www.aphasiatherapyonline.com">
-        <svg id="a" xmlns="http://www.w3.org/2000/svg" width="16" viewBox="0 0 655.39 734.2"><line x1="447.31" y1="150.42" x2="359.17" y2="140.08" fill="none" stroke="currentColor" stroke-miterlimit="10" stroke-width="13"/><g><polyline points="202.6 94.78 168.12 172.58 110.02 239.55 196.19 262.69" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="13"/><polyline points="474.89 275 458.64 237.08 359.17 140.08 284.82 169.13 168.12 172.58 262.27 275 359.17 294.2" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="13"/><polyline points="244.44 108.08 284.82 172.09 359.66 226.25 458.64 239.55" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="13"/><line x1="333.07" y1="82.47" x2="262.27" y2="136.34" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="13"/><polyline points="351.54 344.43 364.59 223.79 267.09 267.12 206.53 380.37" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="13"/><line x1="110.02" y1="304.05" x2="152.36" y2="254.32" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="13"/><line x1="191.76" y1="310.45" x2="201.6" y2="213.45" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="13"/><line x1="273.49" y1="411.39" x2="247.34" y2="304.05" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="13"/></g><circle cx="333.07" cy="84.93" r="15.26" fill="currentColor"/><circle cx="202.6" cy="94.78" r="13.29" fill="currentColor"/><circle cx="244.44" cy="109.4" r="15.98" fill="currentColor"/><circle cx="447.31" cy="150.42" r="15.76" fill="currentColor"/><circle cx="359.66" cy="141.53" r="16.24" fill="currentColor"/><circle cx="112.02" cy="236.12" r="16.97" fill="currentColor"/><circle cx="283.6" cy="173.2" r="23.39" fill="currentColor"/><circle cx="359.66" cy="226.25" r="20.68" fill="currentColor"/><circle cx="458.64" cy="237.08" r="19.2" fill="currentColor"/><circle cx="475.89" cy="280.19" r="13.29" fill="currentColor"/><circle cx="357.17" cy="294.2" r="16.73" fill="currentColor"/><circle cx="352.76" cy="345.89" r="13.04" fill="currentColor"/><circle cx="105.6" cy="303.08" r="13.05" fill="currentColor"/><circle cx="191.76" cy="311.45" r="13.05" fill="currentColor"/><circle cx="273.49" cy="411.39" r="13.05" fill="currentColor"/><circle cx="205.53" cy="382.34" r="18.69" fill="currentColor"/><circle cx="265.75" cy="269.99" r="23.49" fill="currentColor"/><circle cx="204.53" cy="221.14" r="15.58" fill="currentColor"/><circle cx="191.76" cy="261.95" r="15.58" fill="currentColor"/><path d="m646.47,402.89l-50.25-81c-5.25-5.25-5.8-11.88-2.25-15.75s26.62-15.38-23.6-139.96C517.62,35.36,380.34,8.47,380.34,8.47c0,0-210.04-49.71-323.66,91.73-113.63,141.44-21.3,300.83-21.3,300.83,35.64,64.7,59.67,66.18,74.64,106.92,37.22,101.29-4.42,187.01-4.42,187.01,0,0-5.51,10.55-10.76,22.55s.38,14.14.38,14.14c0,0,341.25,5.73,343.87,0s6.38-36.27,9.38-69.64,37.27-24.37,37.27-24.37c0,0,42.61,10.5,73.73,6,61.32-8.87,43.5-59.25,36.75-78s-4.5-20.25,8.62-31.12c13.12-10.88,3.75-16.87,2.25-18.75s-10.5-6.75-10.5-6.75c21.37-5.62,23.25-12.75,17.62-31.12-5.62-18.38-3.38-20.62,26.25-34.12s6-40.87,6-40.87Zm-233.06-.15c-2.23,19.55-1.39,66.59,52.13,90.71,0,0-104.87,8.16-150.78-62.27-9.94,1-20.06,1.52-30.34,1.52-133.13,0-241.06-86.48-241.06-193.15S151.28,46.39,284.41,46.39s241.06,86.48,241.06,193.15c0,68.66-44.71,128.94-112.07,163.19Z" fill="currentColor"/></svg>
-    </a>
-    <a href="mailto:cvrepr.wbua.r@tznvy.pbz" id="emaila">
-        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-at" viewBox="0 0 16 16">
-            <path d="M13.106 7.222c0-2.967-2.249-5.032-5.482-5.032-3.35 0-5.646 2.318-5.646 5.702 0 3.493 2.235 5.708 5.762 5.708.862 0 1.689-.123 2.304-.335v-.862c-.43.199-1.354.328-2.29.328-2.926 0-4.813-1.88-4.813-4.798 0-2.844 1.921-4.881 4.594-4.881 2.735 0 4.608 1.688 4.608 4.156 0 1.682-.554 2.769-1.416 2.769-.492 0-.772-.28-.772-.76V5.206H8.923v.834h-.11c-.266-.595-.881-.964-1.6-.964-1.4 0-2.378 1.162-2.378 2.823 0 1.737.957 2.906 2.379 2.906.8 0 1.415-.39 1.709-1.087h.11c.081.67.703 1.148 1.503 1.148 1.572 0 2.57-1.415 2.57-3.643zm-7.177.704c0-1.197.54-1.907 1.456-1.907.93 0 1.524.738 1.524 1.907S8.308 9.84 7.371 9.84c-.895 0-1.442-.725-1.442-1.914z"/>
-        </svg>
-    </a>
-        <script>
-            let emaila = document.getElementById('emaila')
-            let href = emaila.getAttribute("href").substring(7);
-            function rot13(str) {
-            // Create an empty string to store the decrypted string
-            let decrypted = "";
-            for (let i = 0; i < str.length; i++) {
-                let charCode = str.charCodeAt(i);
-                if (charCode >= 65 && charCode <= 90) {
-                    charCode = (charCode - 65 + 13) % 26 + 65;
-                } else if (charCode >= 97 && charCode <= 122) {
-                    charCode = (charCode - 97 + 13) % 26 + 97;
-                }
-            decrypted += String.fromCharCode(charCode);
-            }
-            return decrypted;
-            }
-            let newhref = rot13(href);
-            emaila.setAttribute("href","mailto:"+newhref);
-        </script>
-    <a href="https://scholars.latrobe.edu.au/jpierce">
-        <svg style="width:24px;height:24px" viewBox="0 0 24 24">
-            <path fill="currentColor" d="M12,3L1,9L12,15L21,10.09V17H23V9M5,13.18V17.18L12,21L19,17.18V13.18L12,17L5,13.18Z" />
-        </svg>
-    </a>
-
-    <p>I'm a speech pathologist and researcher. I want to make life better for people with aphasia by taking management and rehabilitation towards optimal care. I think technology, clinical tools and research are the way to do so. I also <i>love</i> communicating research to speech pathologists, students and people with aphasia</p>
+<!-- Profil -->
+    <div class="profileContainer">
+        <img alt="Profile photograph of John Pierce" src="images/profile.jpg" id="profileimg"/>
+    </div>
+<!-- External links -->
+    <div class="externalLinks">
+        <a href="www.twitter.com/johnpierce85" >
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
+                <path d="M5.026 15c6.038 0 9.341-5.003 9.341-9.334 0-.14 0-.282-.006-.422A6.685 6.685 0 0 0 16 3.542a6.658 6.658 0 0 1-1.889.518 3.301 3.301 0 0 0 1.447-1.817 6.533 6.533 0 0 1-2.087.793A3.286 3.286 0 0 0 7.875 6.03a9.325 9.325 0 0 1-6.767-3.429 3.289 3.289 0 0 0 1.018 4.382A3.323 3.323 0 0 1 .64 6.575v.045a3.288 3.288 0 0 0 2.632 3.218 3.203 3.203 0 0 1-.865.115 3.23 3.23 0 0 1-.614-.057 3.283 3.283 0 0 0 3.067 2.277A6.588 6.588 0 0 1 .78 13.58a6.32 6.32 0 0 1-.78-.045A9.344 9.344 0 0 0 5.026 15z"/>
+            </svg>
+        </a>
+        <a href="https://www.youtube.com/@johnepierce">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-youtube" viewBox="0 0 16 16">
+                <path d="M8.051 1.999h.089c.822.003 4.987.033 6.11.335a2.01 2.01 0 0 1 1.415 1.42c.101.38.172.883.22 1.402l.01.104.022.26.008.104c.065.914.073 1.77.074 1.957v.075c-.001.194-.01 1.108-.082 2.06l-.008.105-.009.104c-.05.572-.124 1.14-.235 1.558a2.007 2.007 0 0 1-1.415 1.42c-1.16.312-5.569.334-6.18.335h-.142c-.309 0-1.587-.006-2.927-.052l-.17-.006-.087-.004-.171-.007-.171-.007c-1.11-.049-2.167-.128-2.654-.26a2.007 2.007 0 0 1-1.415-1.419c-.111-.417-.185-.986-.235-1.558L.09 9.82l-.008-.104A31.4 31.4 0 0 1 0 7.68v-.123c.002-.215.01-.958.064-1.778l.007-.103.003-.052.008-.104.022-.26.01-.104c.048-.519.119-1.023.22-1.402a2.007 2.007 0 0 1 1.415-1.42c.487-.13 1.544-.21 2.654-.26l.17-.007.172-.006.086-.003.171-.007A99.788 99.788 0 0 1 7.858 2h.193zM6.4 5.209v4.818l4.157-2.408L6.4 5.209z"/>
+              </svg>
+        </a>
+        <a href="www.aphasiatherapyonline.com">
+            <svg id="a" xmlns="http://www.w3.org/2000/svg" width="16" viewBox="0 0 655.39 734.2"><line x1="447.31" y1="150.42" x2="359.17" y2="140.08" fill="none" stroke="currentColor" stroke-miterlimit="10" stroke-width="13"/><g><polyline points="202.6 94.78 168.12 172.58 110.02 239.55 196.19 262.69" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="13"/><polyline points="474.89 275 458.64 237.08 359.17 140.08 284.82 169.13 168.12 172.58 262.27 275 359.17 294.2" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="13"/><polyline points="244.44 108.08 284.82 172.09 359.66 226.25 458.64 239.55" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="13"/><line x1="333.07" y1="82.47" x2="262.27" y2="136.34" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="13"/><polyline points="351.54 344.43 364.59 223.79 267.09 267.12 206.53 380.37" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="13"/><line x1="110.02" y1="304.05" x2="152.36" y2="254.32" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="13"/><line x1="191.76" y1="310.45" x2="201.6" y2="213.45" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="13"/><line x1="273.49" y1="411.39" x2="247.34" y2="304.05" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="13"/></g><circle cx="333.07" cy="84.93" r="15.26" fill="currentColor"/><circle cx="202.6" cy="94.78" r="13.29" fill="currentColor"/><circle cx="244.44" cy="109.4" r="15.98" fill="currentColor"/><circle cx="447.31" cy="150.42" r="15.76" fill="currentColor"/><circle cx="359.66" cy="141.53" r="16.24" fill="currentColor"/><circle cx="112.02" cy="236.12" r="16.97" fill="currentColor"/><circle cx="283.6" cy="173.2" r="23.39" fill="currentColor"/><circle cx="359.66" cy="226.25" r="20.68" fill="currentColor"/><circle cx="458.64" cy="237.08" r="19.2" fill="currentColor"/><circle cx="475.89" cy="280.19" r="13.29" fill="currentColor"/><circle cx="357.17" cy="294.2" r="16.73" fill="currentColor"/><circle cx="352.76" cy="345.89" r="13.04" fill="currentColor"/><circle cx="105.6" cy="303.08" r="13.05" fill="currentColor"/><circle cx="191.76" cy="311.45" r="13.05" fill="currentColor"/><circle cx="273.49" cy="411.39" r="13.05" fill="currentColor"/><circle cx="205.53" cy="382.34" r="18.69" fill="currentColor"/><circle cx="265.75" cy="269.99" r="23.49" fill="currentColor"/><circle cx="204.53" cy="221.14" r="15.58" fill="currentColor"/><circle cx="191.76" cy="261.95" r="15.58" fill="currentColor"/><path d="m646.47,402.89l-50.25-81c-5.25-5.25-5.8-11.88-2.25-15.75s26.62-15.38-23.6-139.96C517.62,35.36,380.34,8.47,380.34,8.47c0,0-210.04-49.71-323.66,91.73-113.63,141.44-21.3,300.83-21.3,300.83,35.64,64.7,59.67,66.18,74.64,106.92,37.22,101.29-4.42,187.01-4.42,187.01,0,0-5.51,10.55-10.76,22.55s.38,14.14.38,14.14c0,0,341.25,5.73,343.87,0s6.38-36.27,9.38-69.64,37.27-24.37,37.27-24.37c0,0,42.61,10.5,73.73,6,61.32-8.87,43.5-59.25,36.75-78s-4.5-20.25,8.62-31.12c13.12-10.88,3.75-16.87,2.25-18.75s-10.5-6.75-10.5-6.75c21.37-5.62,23.25-12.75,17.62-31.12-5.62-18.38-3.38-20.62,26.25-34.12s6-40.87,6-40.87Zm-233.06-.15c-2.23,19.55-1.39,66.59,52.13,90.71,0,0-104.87,8.16-150.78-62.27-9.94,1-20.06,1.52-30.34,1.52-133.13,0-241.06-86.48-241.06-193.15S151.28,46.39,284.41,46.39s241.06,86.48,241.06,193.15c0,68.66-44.71,128.94-112.07,163.19Z" fill="currentColor"/></svg>
+        </a>
+        <a href="mailto:cvrepr.wbua.r@tznvy.pbz" id="emaila">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-at" viewBox="0 0 16 16">
+                <path d="M13.106 7.222c0-2.967-2.249-5.032-5.482-5.032-3.35 0-5.646 2.318-5.646 5.702 0 3.493 2.235 5.708 5.762 5.708.862 0 1.689-.123 2.304-.335v-.862c-.43.199-1.354.328-2.29.328-2.926 0-4.813-1.88-4.813-4.798 0-2.844 1.921-4.881 4.594-4.881 2.735 0 4.608 1.688 4.608 4.156 0 1.682-.554 2.769-1.416 2.769-.492 0-.772-.28-.772-.76V5.206H8.923v.834h-.11c-.266-.595-.881-.964-1.6-.964-1.4 0-2.378 1.162-2.378 2.823 0 1.737.957 2.906 2.379 2.906.8 0 1.415-.39 1.709-1.087h.11c.081.67.703 1.148 1.503 1.148 1.572 0 2.57-1.415 2.57-3.643zm-7.177.704c0-1.197.54-1.907 1.456-1.907.93 0 1.524.738 1.524 1.907S8.308 9.84 7.371 9.84c-.895 0-1.442-.725-1.442-1.914z"/>
+            </svg>
+        </a>
+        <a href="https://scholars.latrobe.edu.au/jpierce">
+            <svg viewBox="0 0 24 24">
+                <path fill="currentColor" d="M12,3L1,9L12,15L21,10.09V17H23V9M5,13.18V17.18L12,21L19,17.18V13.18L12,17L5,13.18Z" />
+            </svg>
+        </a>
+    </div>
+<!-- Bio paragraph -->
+    <p class="bioParagraph">
+        I am Dr <b>John E. Pierce</b>. I'm a speech pathologist and researcher. I want to make life better for people with aphasia by taking management and rehabilitation towards optimal care. I think technology, clinical tools and research are the way to do so. I also <i>love</i> communicating research to speech pathologists, students and people with aphasia</p>
+    </p>
+<!--  -->
+    <div class="toplink" id="Projects_and_tools">
+        <a href="">Projects and tools</a>
+    </div>
+    <div class="toplink" id="Tutorials">
+        <a href="">Tutorials</a>
+    </div>
+    <div class="toplink" id="Publications">
+        <a href="">Publications</a>
+    </div>
+    <div class="toplink" id="Presentations_and_posters">
+        <a href="">Presentations and posters</a>
+    </div>
+    <div class="toplink">
+        <a href="CV.html">CV</a>
+    </div>
+<!--  -->
+    <div class="contentlinks">
+        <div class="Tutorials">
+            Dysarthria tutorials
+        </div>
+        <div class="Publications">
+            <div>How do Constraint Induced Aphasia Therapy and Multi-Modal Aphasia Therapy compare to usual care?</div>
+        </div>
+        <div class="Projects_and_tools">
+            <div>How can I make an aphasia friendly video abstract?</div>
+        </div>
+        <div class="Presentations_and_posters">
+            <div>What does artificial intelligence have to do with aphasia management?</div>
+        </div>
+    </div>
 </body>
 </html>
