--- a/index.html
+++ b/index.html
@@ -65,16 +65,16 @@
     <div class="wordcloud"></div>
 <!-- CONTENT LINKS -->
     <div class="contentlinks">
-        <div class="Tutorials">
+        <div class="Tutorials dysarthria">
             <div>Dysarthria tutorials</div> 
         </div>
-        <div class="Publications">
+        <div class="Publications aphasia multi-modal_aphasia_therapy constraint-induced_aphasia_therapy">
             <div>How do Constraint Induced Aphasia Therapy and Multi-Modal Aphasia Therapy compare to usual care?</div>
         </div>
-        <div class="Projects_and_tools Tutorials">
+        <div class="Projects_and_tools Tutorials aphasia aphasia-friendly_videos video_abstracts">
             <div>How can I make an aphasia friendly video abstract?</div>
         </div>
-        <div class="Presentations_and_posters">
+        <div class="Presentations_and_posters aphasia AI video_abstracts">
             <div>What does artificial intelligence have to do with aphasia management?</div>
         </div>
     </div>
