--- a/index.html
+++ b/index.html
@@ -68,23 +68,28 @@
 <!-- CONTENT LINKS -->
     <div class="contentlinks">
         <div class="Tutorials dysarthria">
-            <div style="font-weight: bold;">Dysarthria tutorials</div> 
-            <img src="images/ataxic.jpeg" alt="youtube thumbnail"/>
-            <img src="images/flaccid.png" alt="youtube thumbnail"/>
-            <img src="images/spastic.png" alt="youtube thumbnail">
-            <img src="images/UUMN.png" alt="youtube thumbnail">
-            <img src="images/hyperkinetic.png" alt="youtube thumbnail">
-            <img src="images/hypokinetic.png" alt="youtube thumbnail">
-            <p>There are six dysarthria subtypes. I explain each one clearly and discuss samples of each.</p>
+            <a href="https://www.youtube.com/playlist?list=PLhVDZD_iZSouPkLjPXaWUx0jnX_ikT8EY" target="_blank">
+                <div style="font-weight: bold;width: min-content;" class="cardColumnLeft">Dysarthria tutorials</div> 
+                <div style="background-image: url('images/dysarthriatutorialthumbs.png');width: 100%;background-size: cover; text-align: end;box-shadow: inset 0 0 30px -16px;
+                background-color: lightgray;" id="dysarthriatutorialthumbs" class="cardColumnRight">
+                    <div style="width: 50%;float: inline-end; padding: 0;">Each dysarthria subtype clearly explained along with speech samples.</div>
+                </div>
+            </a>
         </div>
         <div class="Publications aphasia multi-modal_aphasia_therapy constraint-induced_aphasia_therapy">
-            <div>Which aphasia therapy is more effective: Constraint Induced Aphasia Therapy, Multi-Modal Aphasia Therapy, or usual care? We randomised <b>216</b> people to find out.</div>
+            <a>
+                <div><b>Which aphasia therapy is more effective:</b> Constraint Induced Aphasia Therapy, Multi-Modal Aphasia Therapy, or usual care? We randomised <b>216</b> people to find out.</div>
+            </a>
         </div>
         <div class="Projects_and_tools Tutorials aphasia aphasia-friendly_videos video_abstracts">
-            <div>How can I make an aphasia friendly video abstract for my research?</div>
+            <a>
+                <div>How can I make an aphasia friendly video abstract for my research?</div>
+            </a>
         </div>
         <div class="Presentations_and_posters aphasia AI video_abstracts">
-            <div>What does artificial intelligence have to do with aphasia management?</div>
+            <a>
+                <div>What does artificial intelligence have to do with aphasia management?</div>
+            </a>
         </div>
     </div>
 </body>
