--- a/index.html
+++ b/index.html
@@ -69,16 +69,19 @@
     <div class="contentlinks">
         <div class="Tutorials dysarthria">
             <a href="https://www.youtube.com/playlist?list=PLhVDZD_iZSouPkLjPXaWUx0jnX_ikT8EY" target="_blank">
-                <div style="font-weight: bold;width: min-content;" class="cardColumnLeft">Dysarthria tutorials</div> 
-                <div style="background-image: url('images/dysarthriatutorialthumbs.png');width: 100%;background-size: cover; text-align: end;box-shadow: inset 0 0 30px -16px;
+                <div class="cardColumnLeft">Dysarthria tutorials</div> 
+                <div style="background-image: url('images/dysarthriatutorialthumbs.png');background-size: cover; text-align: end;box-shadow: inset 0 0 30px -16px;
                 background-color: lightgray;" id="dysarthriatutorialthumbs" class="cardColumnRight">
-                    <div style="width: 50%;float: inline-end; padding: 0;">Each dysarthria subtype clearly explained along with speech samples.</div>
+                    <div style="width: 50%;justify-self: end; padding: 0;">Each dysarthria subtype clearly explained along with speech samples.</div>
                 </div>
             </a>
         </div>
         <div class="Publications aphasia multi-modal_aphasia_therapy constraint-induced_aphasia_therapy">
-            <a>
-                <div><b>Which aphasia therapy is more effective:</b> Constraint Induced Aphasia Therapy, Multi-Modal Aphasia Therapy, or usual care? We randomised <b>216</b> people to find out.</div>
+            <a href="http://dx.doi.org/10.1136/jnnp-2021-328422" target="_blank">
+                <div class="cardColumnLeft">COMPARE trial results</div>
+                <img src="images/compare logo.png" alt="logo for the COMPARE aphasia trial" style="grid-column: 2/3;max-height:6rem"/>
+                <p class="cardColumnRight"style="grid-column: 3/4; font-size: 1rem;"><b>Which aphasia therapy is more effective:</b> <span style="color: #60ae46;">Constraint Induced Aphasia Therapy</span>, <span style="color:#2491b0;">Multi-Modal Aphasia Therapy</span>, or usual care?
+                <br>We randomised <span style="font-weight: 800;color:rebeccapurple">216</span> people to find out.</p>
             </a>
         </div>
         <div class="Projects_and_tools Tutorials aphasia aphasia-friendly_videos video_abstracts">
