--- a/index.html
+++ b/index.html
@@ -19,24 +19,37 @@
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
                 <path d="M5.026 15c6.038 0 9.341-5.003 9.341-9.334 0-.14 0-.282-.006-.422A6.685 6.685 0 0 0 16 3.542a6.658 6.658 0 0 1-1.889.518 3.301 3.301 0 0 0 1.447-1.817 6.533 6.533 0 0 1-2.087.793A3.286 3.286 0 0 0 7.875 6.03a9.325 9.325 0 0 1-6.767-3.429 3.289 3.289 0 0 0 1.018 4.382A3.323 3.323 0 0 1 .64 6.575v.045a3.288 3.288 0 0 0 2.632 3.218 3.203 3.203 0 0 1-.865.115 3.23 3.23 0 0 1-.614-.057 3.283 3.283 0 0 0 3.067 2.277A6.588 6.588 0 0 1 .78 13.58a6.32 6.32 0 0 1-.78-.045A9.344 9.344 0 0 0 5.026 15z"/>
             </svg>
+            <div class="externalLinkLabel">twitter</div>
         </a>
         <a href="https://www.youtube.com/@johnepierce" id="youtube" target="_blank">
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-youtube" viewBox="0 0 16 16">
                 <path d="M8.051 1.999h.089c.822.003 4.987.033 6.11.335a2.01 2.01 0 0 1 1.415 1.42c.101.38.172.883.22 1.402l.01.104.022.26.008.104c.065.914.073 1.77.074 1.957v.075c-.001.194-.01 1.108-.082 2.06l-.008.105-.009.104c-.05.572-.124 1.14-.235 1.558a2.007 2.007 0 0 1-1.415 1.42c-1.16.312-5.569.334-6.18.335h-.142c-.309 0-1.587-.006-2.927-.052l-.17-.006-.087-.004-.171-.007-.171-.007c-1.11-.049-2.167-.128-2.654-.26a2.007 2.007 0 0 1-1.415-1.419c-.111-.417-.185-.986-.235-1.558L.09 9.82l-.008-.104A31.4 31.4 0 0 1 0 7.68v-.123c.002-.215.01-.958.064-1.778l.007-.103.003-.052.008-.104.022-.26.01-.104c.048-.519.119-1.023.22-1.402a2.007 2.007 0 0 1 1.415-1.42c.487-.13 1.544-.21 2.654-.26l.17-.007.172-.006.086-.003.171-.007A99.788 99.788 0 0 1 7.858 2h.193zM6.4 5.209v4.818l4.157-2.408L6.4 5.209z"/>
               </svg>
+              <div class="externalLinkLabel">youtube</div>
         </a>
         <a href="http://www.aphasiatherapyonline.com" id="aphasiatherapyonline" target="_blank">
             <svg id="a" xmlns="http://www.w3.org/2000/svg" width="16" viewBox="0 0 655.39 734.2"><line x1="447.31" y1="150.42" x2="359.17" y2="140.08" fill="none" stroke="currentColor" stroke-miterlimit="10" stroke-width="13"/><g><polyline points="202.6 94.78 168.12 172.58 110.02 239.55 196.19 262.69" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="13"/><polyline points="474.89 275 458.64 237.08 359.17 140.08 284.82 169.13 168.12 172.58 262.27 275 359.17 294.2" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="13"/><polyline points="244.44 108.08 284.82 172.09 359.66 226.25 458.64 239.55" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="13"/><line x1="333.07" y1="82.47" x2="262.27" y2="136.34" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="13"/><polyline points="351.54 344.43 364.59 223.79 267.09 267.12 206.53 380.37" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="13"/><line x1="110.02" y1="304.05" x2="152.36" y2="254.32" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="13"/><line x1="191.76" y1="310.45" x2="201.6" y2="213.45" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="13"/><line x1="273.49" y1="411.39" x2="247.34" y2="304.05" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="13"/></g><circle cx="333.07" cy="84.93" r="15.26" fill="currentColor"/><circle cx="202.6" cy="94.78" r="13.29" fill="currentColor"/><circle cx="244.44" cy="109.4" r="15.98" fill="currentColor"/><circle cx="447.31" cy="150.42" r="15.76" fill="currentColor"/><circle cx="359.66" cy="141.53" r="16.24" fill="currentColor"/><circle cx="112.02" cy="236.12" r="16.97" fill="currentColor"/><circle cx="283.6" cy="173.2" r="23.39" fill="currentColor"/><circle cx="359.66" cy="226.25" r="20.68" fill="currentColor"/><circle cx="458.64" cy="237.08" r="19.2" fill="currentColor"/><circle cx="475.89" cy="280.19" r="13.29" fill="currentColor"/><circle cx="357.17" cy="294.2" r="16.73" fill="currentColor"/><circle cx="352.76" cy="345.89" r="13.04" fill="currentColor"/><circle cx="105.6" cy="303.08" r="13.05" fill="currentColor"/><circle cx="191.76" cy="311.45" r="13.05" fill="currentColor"/><circle cx="273.49" cy="411.39" r="13.05" fill="currentColor"/><circle cx="205.53" cy="382.34" r="18.69" fill="currentColor"/><circle cx="265.75" cy="269.99" r="23.49" fill="currentColor"/><circle cx="204.53" cy="221.14" r="15.58" fill="currentColor"/><circle cx="191.76" cy="261.95" r="15.58" fill="currentColor"/><path d="m646.47,402.89l-50.25-81c-5.25-5.25-5.8-11.88-2.25-15.75s26.62-15.38-23.6-139.96C517.62,35.36,380.34,8.47,380.34,8.47c0,0-210.04-49.71-323.66,91.73-113.63,141.44-21.3,300.83-21.3,300.83,35.64,64.7,59.67,66.18,74.64,106.92,37.22,101.29-4.42,187.01-4.42,187.01,0,0-5.51,10.55-10.76,22.55s.38,14.14.38,14.14c0,0,341.25,5.73,343.87,0s6.38-36.27,9.38-69.64,37.27-24.37,37.27-24.37c0,0,42.61,10.5,73.73,6,61.32-8.87,43.5-59.25,36.75-78s-4.5-20.25,8.62-31.12c13.12-10.88,3.75-16.87,2.25-18.75s-10.5-6.75-10.5-6.75c21.37-5.62,23.25-12.75,17.62-31.12-5.62-18.38-3.38-20.62,26.25-34.12s6-40.87,6-40.87Zm-233.06-.15c-2.23,19.55-1.39,66.59,52.13,90.71,0,0-104.87,8.16-150.78-62.27-9.94,1-20.06,1.52-30.34,1.52-133.13,0-241.06-86.48-241.06-193.15S151.28,46.39,284.41,46.39s241.06,86.48,241.06,193.15c0,68.66-44.71,128.94-112.07,163.19Z" fill="currentColor"/></svg>
-        </a>
-        <a href="mailto:cvrepr.wbua.r@tznvy.pbz" id="emaila" target="_blank">
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-at" viewBox="0 0 16 16">
-                <path d="M13.106 7.222c0-2.967-2.249-5.032-5.482-5.032-3.35 0-5.646 2.318-5.646 5.702 0 3.493 2.235 5.708 5.762 5.708.862 0 1.689-.123 2.304-.335v-.862c-.43.199-1.354.328-2.29.328-2.926 0-4.813-1.88-4.813-4.798 0-2.844 1.921-4.881 4.594-4.881 2.735 0 4.608 1.688 4.608 4.156 0 1.682-.554 2.769-1.416 2.769-.492 0-.772-.28-.772-.76V5.206H8.923v.834h-.11c-.266-.595-.881-.964-1.6-.964-1.4 0-2.378 1.162-2.378 2.823 0 1.737.957 2.906 2.379 2.906.8 0 1.415-.39 1.709-1.087h.11c.081.67.703 1.148 1.503 1.148 1.572 0 2.57-1.415 2.57-3.643zm-7.177.704c0-1.197.54-1.907 1.456-1.907.93 0 1.524.738 1.524 1.907S8.308 9.84 7.371 9.84c-.895 0-1.442-.725-1.442-1.914z"/>
-            </svg>
+            <div class="externalLinkLabel">aphasia therapy online</div>
         </a>
         <a href="https://scholars.latrobe.edu.au/jpierce" id="latrobe" target="_blank">
             <svg viewBox="0 0 24 24">
                 <path fill="currentColor" d="M12,3L1,9L12,15L21,10.09V17H23V9M5,13.18V17.18L12,21L19,17.18V13.18L12,17L5,13.18Z" />
             </svg>
+            <div class="externalLinkLabel">La Trobe<br>University profile</div>
+        </a>
+        <a href="mailto:cvrepr.wbua.r@tznvy.pbz" id="emaila" target="_blank">
+            <?xml version="1.0" encoding="UTF-8"?>
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 24 24" " style="transform: scale(0.76);">
+                <g>
+                    <path d="M31.1,2l-1.9,1.7l-8.1,7.4l8.1,7.3l1.9,1.7v0c0.2-0.4,0.3-0.9,0.3-1.4V3.3C31.4,2.8,31.3,2.4,31.1,2L31.1,2z"/>
+                    <path d="M19.5,12.6l-1.2,1.1c-0.6,0.6-1.4,0.9-2.2,0.9s-1.6-0.3-2.2-0.9l-1.2-1.1l-8,7.2l-2.1,1.9C2.9,21.9,3.4,22,3.9,22h24.2
+                        c0.5,0,1-0.1,1.4-0.3l-2.1-1.9L19.5,12.6z"/>
+                    <path d="M10.9,11.1L2.8,3.7L0.9,1.9C0.7,2.3,0.6,2.8,0.6,3.3v15.4c0,0.5,0.1,1,0.3,1.4l1.9-1.7L10.9,11.1z"/>
+                    <path d="M15.3,12.1c0.2,0.2,0.5,0.3,0.7,0.3c0.3,0,0.5-0.1,0.7-0.3L29.6,0.4h0c-0.5-0.2-1-0.4-1.5-0.4H3.9c-0.5,0-1,0.1-1.5,0.3
+                        l2,1.9L15.3,12.1z"/>
+                </g>
+                </svg>
+            <div class="externalLinkLabel">email me</div>
         </a>
     </div>
 <!-- Bio paragraph -->
@@ -70,7 +83,7 @@
         <div class="Tutorials dysarthria">
             <a href="https://www.youtube.com/playlist?list=PLhVDZD_iZSouPkLjPXaWUx0jnX_ikT8EY" target="_blank">
                 <div class="cardColumnLeft">Dysarthria tutorials</div> 
-                <div style="background-image: url('images/dysarthriatutorialthumbs.png');background-size: cover; text-align: end;box-shadow: inset 0 0 30px -16px;
+                <div style="grid-column: 2/3;background-image: url('images/dysarthriatutorialthumbs.png');background-size: cover; text-align: end;box-shadow: inset 0 0 30px -16px;
                 background-color: lightgray;" id="dysarthriatutorialthumbs" class="cardColumnRight">
                     <div style="width: 50%;justify-self: end; padding: 0;">Each dysarthria subtype clearly explained along with speech samples.</div>
                 </div>
@@ -80,13 +93,15 @@
             <a href="http://dx.doi.org/10.1136/jnnp-2021-328422" target="_blank">
                 <div class="cardColumnLeft">COMPARE trial results</div>
                 <img src="images/compare logo.png" alt="logo for the COMPARE aphasia trial" style="grid-column: 2/3;max-height:6rem"/>
-                <p class="cardColumnRight"style="grid-column: 3/4; font-size: 1rem;"><b>Which aphasia therapy is more effective:</b> <span style="color: #60ae46;">Constraint Induced Aphasia Therapy</span>, <span style="color:#2491b0;">Multi-Modal Aphasia Therapy</span>, or usual care?
-                <br>We randomised <span style="font-weight: 800;color:rebeccapurple">216</span> people to find out.</p>
+                <div class="cardColumnRight"style="grid-column: 3/4; font-size: 1rem; font-weight: normal;  display: grid; align-items: center; background-color: white;">
+                    <p>
+                    <b>Which aphasia therapy is more effective:</b> <span style="color: #60ae46;">Constraint Induced Aphasia Therapy</span>, <span style="color:#2491b0;">Multi-Modal Aphasia Therapy</span>, or usual care?
+                    <br>We randomised <span style="font-weight: 800;color:rebeccapurple">216</span> people to find out.</div>
             </a>
         </div>
         <div class="Projects_and_tools Tutorials aphasia aphasia-friendly_videos video_abstracts">
             <a>
-                <div>How can I make an aphasia friendly video abstract for my research?</div>
+                <div>How to make an aphasia friendly</b> video abstract for your research</div>
             </a>
         </div>
         <div class="Presentations_and_posters aphasia AI video_abstracts">
