--- a/index.html
+++ b/index.html
@@ -100,8 +100,18 @@
             </a>
         </div>
         <div class="Projects_and_tools Tutorials aphasia aphasia-friendly_videos video_abstracts">
-            <a>
-                <div>How to make an aphasia friendly</b> video abstract for your research</div>
+            <a href="https://www.aphasiatrials.org/aphasia-friendly-video-abstract-project/" target="_blank" style="grid-template-columns: 1fr 2fr;">
+                <div class="cardColumnLeft" style="grid-column: 1/2;width: fit-content;">How to make an aphasia friendly video abstract for your research</div>
+                <div style="background-color:#ace0cb;grid-column: 2/3;grid-template-columns: 1fr max-content 1fr;">
+                    <img src="images/document.png" alt="icon of paper document" style="max-height: 4rem;justify-self: right;">
+                    <span style="justify-items: center;padding: 1rem;">
+                        <i class="right arrow"></i>
+                        <i class="right arrow"></i>
+                        <i class="right arrow"></i>
+                        <i class="right arrow"></i>
+                    </span>
+                    <img src="images/video.png" alt="icon of video" style="max-height: 3rem;border-radius: 0.3rem;justify-self: left;">
+                </div>
             </a>
         </div>
         <div class="Presentations_and_posters aphasia AI video_abstracts">
