--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     </div>
 <!-- Bio paragraph -->
     <div class="bioParagraph">
-        <p>I'm <b>John Pierce</b>, a speech pathologist and researcher. I believe that research, technology and tools for speech pathologists can make life better for people with aphasia, so that's what I work on.</p>
+        <p>I'm <b>John Pierce</b>, a speech pathologist and researcher. I work on research, tools for speech pathologists, and technology to make life better for people with aphasia.</p>
     </div>
 <!-- TOP LINKS -->
     <div class="toplinkContainer" style="display: none;">
@@ -80,29 +80,55 @@
     </div>
 <!-- CONTENT LINKS -->
     <div class="contentlinks">
-        <div class="Tutorials dysarthria">
-            <a href="https://www.youtube.com/playlist?list=PLhVDZD_iZSouPkLjPXaWUx0jnX_ikT8EY" target="_blank">
-                <div class="cardColumnLeft">Dysarthria tutorials</div> 
-                <div style="grid-column: 2/3;background-image: url('images/dysarthriatutorialthumbs.png');background-size: cover; text-align: end;box-shadow: inset 0 0 30px -16px;
-                background-color: lightgray;" id="dysarthriatutorialthumbs" class="cardColumnRight">
-                    <div style="width: 50%;justify-self: end; padding: 0;">Each dysarthria subtype clearly explained along with speech samples.</div>
+        <!-- <div class="">
+            <a href="" target="">
+                <div class="cardUpper" >
+                    <img src="" alt="" style=""/>
+                </div>
+                <div class="cardLower">
+                    Heading
+                </div>
+            </a>
+        </div> -->
+        <div class="Publications aphasia multi-modal_aphasia_therapy constraint-induced_aphasia_therapy">
+            <a href="https://doi.org/10.1080/10749357.2023.2196765" target="_blank">
+                <div class="cardUpper" >
+                    <img src="images/substudytimeline.png" alt="" style="height: 9rem;"/>
+                </div>
+                <div class="cardLower">
+                    Pilot study of lower intensity treatments
+                    <span>What happens when people receive low-moderate intensity <span style="color: #60ae46;">Constraint Induced Aphasia Therapy</span> or <span style="color:#2491b0;">Multi-Modal Aphasia Therapy</span>?</span>
                 </div>
             </a>
         </div>
         <div class="Publications aphasia multi-modal_aphasia_therapy constraint-induced_aphasia_therapy">
             <a href="http://dx.doi.org/10.1136/jnnp-2021-328422" target="_blank">
-                <div class="cardColumnLeft">COMPARE trial results</div>
-                <img src="images/compare logo.png" alt="logo for the COMPARE aphasia trial" style="grid-column: 2/3;max-height:6rem"/>
-                <div class="cardColumnRight"style="grid-column: 3/4; font-size: 1rem; font-weight: normal;  display: grid; align-items: center; background-color: white;">
-                    <p>
-                    <b>Which aphasia therapy is more effective:</b> <span style="color: #60ae46;">Constraint Induced Aphasia Therapy</span>, <span style="color:#2491b0;">Multi-Modal Aphasia Therapy</span>, or usual care?
-                    <br>We randomised <span style="font-weight: 800;color:rebeccapurple">216</span> people to find out.</div>
+                <div class="cardUpper" style="background-color: #2490b0;grid-template-columns: 1.5fr 1fr;">
+                    <img src="images/compare logo.png" alt="logo for the COMPARE aphasia trial" style="height: 7rem;justify-self: right;"/>
+                    <img src="images/compareschematic.png" alt="logo for the COMPARE aphasia trial" style="height: 7rem;justify-self: left;"/>
+                </div>
+                <div class="cardLower">
+                    COMPARE trial results
+                    <span style="font-size: 1rem;font-weight: 400;">
+                        Which aphasia therapy is more effective: <span style="color: #60ae46;">Constraint Induced Aphasia Therapy</span>, <span style="color:#2491b0;">Multi-Modal Aphasia Therapy</span>, or usual care?
+                        We randomised <span style="font-weight: 800;color:rebeccapurple">216</span> people to find out.
+                    </span>
+                </div>
+            </a>
+        </div>
+        <div class="Tutorials dysarthria">
+            <a href="https://www.youtube.com/playlist?list=PLhVDZD_iZSouPkLjPXaWUx0jnX_ikT8EY" target="_blank">
+                <div class="cardUpper">
+                    <img src="images/dysarthriatutorialthumbs.png" alt="thumbnails of dysarthria tutorial videos"/>
+                </div> 
+                <div class="cardLower">
+                    Dysarthria tutorials - Each subtype explained along with samples.</span>
+                </div>
             </a>
         </div>
         <div class="Projects_and_tools Tutorials aphasia aphasia-friendly_videos video_abstracts">
             <a href="https://www.aphasiatrials.org/aphasia-friendly-video-abstract-project/" target="_blank" style="grid-template-columns: 1fr 2fr;">
-                <div class="cardColumnLeft" style="grid-column: 1/2;width: fit-content;">How to make an aphasia friendly video abstract for your research</div>
-                <div style="background-color:#ace0cb;grid-column: 2/3;grid-template-columns: 1fr max-content 1fr;">
+                <div class="cardUpper" style="background-color:#ace0cb;grid-template-columns: 2fr 1fr 2fr;">
                     <img src="images/document.png" alt="icon of paper document" style="max-height: 4rem;justify-self: right;">
                     <span style="justify-items: center;padding: 1rem;">
                         <i class="right arrow"></i>
@@ -112,12 +138,20 @@
                     </span>
                     <img src="images/video.png" alt="icon of video" style="max-height: 3rem;border-radius: 0.3rem;justify-self: left;">
                 </div>
+                <div class="cardLower">
+                    How to make an aphasia friendly video abstract for your research
+                </div>
             </a>
         </div>
-        <div class="Presentations_and_posters aphasia AI video_abstracts">
+        <!-- <div class="Presentations_and_posters aphasia AI video_abstracts">
             <a>
-                <div>What does artificial intelligence have to do with aphasia management?</div>
-            </a>
+                <div class="cardUpper">
+                    
+                </div>
+                <div class="cardLower">
+                    Artificial Intelligence and aphasia management
+                </div>
+            </a> -->
         </div>
     </div>
 </body>
