Two column cards

--- a/index.html
+++ b/index.html
@@ -29,13 +29,45 @@
         </a>
         <a href="http://www.aphasiatherapyonline.com" id="aphasiatherapyonline" target="_blank">
             <svg id="a" xmlns="http://www.w3.org/2000/svg" width="16" viewBox="0 0 655.39 734.2"><line x1="447.31" y1="150.42" x2="359.17" y2="140.08" fill="none" stroke="currentColor" stroke-miterlimit="10" stroke-width="13"/><g><polyline points="202.6 94.78 168.12 172.58 110.02 239.55 196.19 262.69" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="13"/><polyline points="474.89 275 458.64 237.08 359.17 140.08 284.82 169.13 168.12 172.58 262.27 275 359.17 294.2" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="13"/><polyline points="244.44 108.08 284.82 172.09 359.66 226.25 458.64 239.55" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="13"/><line x1="333.07" y1="82.47" x2="262.27" y2="136.34" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="13"/><polyline points="351.54 344.43 364.59 223.79 267.09 267.12 206.53 380.37" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="13"/><line x1="110.02" y1="304.05" x2="152.36" y2="254.32" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="13"/><line x1="191.76" y1="310.45" x2="201.6" y2="213.45" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="13"/><line x1="273.49" y1="411.39" x2="247.34" y2="304.05" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="13"/></g><circle cx="333.07" cy="84.93" r="15.26" fill="currentColor"/><circle cx="202.6" cy="94.78" r="13.29" fill="currentColor"/><circle cx="244.44" cy="109.4" r="15.98" fill="currentColor"/><circle cx="447.31" cy="150.42" r="15.76" fill="currentColor"/><circle cx="359.66" cy="141.53" r="16.24" fill="currentColor"/><circle cx="112.02" cy="236.12" r="16.97" fill="currentColor"/><circle cx="283.6" cy="173.2" r="23.39" fill="currentColor"/><circle cx="359.66" cy="226.25" r="20.68" fill="currentColor"/><circle cx="458.64" cy="237.08" r="19.2" fill="currentColor"/><circle cx="475.89" cy="280.19" r="13.29" fill="currentColor"/><circle cx="357.17" cy="294.2" r="16.73" fill="currentColor"/><circle cx="352.76" cy="345.89" r="13.04" fill="currentColor"/><circle cx="105.6" cy="303.08" r="13.05" fill="currentColor"/><circle cx="191.76" cy="311.45" r="13.05" fill="currentColor"/><circle cx="273.49" cy="411.39" r="13.05" fill="currentColor"/><circle cx="205.53" cy="382.34" r="18.69" fill="currentColor"/><circle cx="265.75" cy="269.99" r="23.49" fill="currentColor"/><circle cx="204.53" cy="221.14" r="15.58" fill="currentColor"/><circle cx="191.76" cy="261.95" r="15.58" fill="currentColor"/><path d="m646.47,402.89l-50.25-81c-5.25-5.25-5.8-11.88-2.25-15.75s26.62-15.38-23.6-139.96C517.62,35.36,380.34,8.47,380.34,8.47c0,0-210.04-49.71-323.66,91.73-113.63,141.44-21.3,300.83-21.3,300.83,35.64,64.7,59.67,66.18,74.64,106.92,37.22,101.29-4.42,187.01-4.42,187.01,0,0-5.51,10.55-10.76,22.55s.38,14.14.38,14.14c0,0,341.25,5.73,343.87,0s6.38-36.27,9.38-69.64,37.27-24.37,37.27-24.37c0,0,42.61,10.5,73.73,6,61.32-8.87,43.5-59.25,36.75-78s-4.5-20.25,8.62-31.12c13.12-10.88,3.75-16.87,2.25-18.75s-10.5-6.75-10.5-6.75c21.37-5.62,23.25-12.75,17.62-31.12-5.62-18.38-3.38-20.62,26.25-34.12s6-40.87,6-40.87Zm-233.06-.15c-2.23,19.55-1.39,66.59,52.13,90.71,0,0-104.87,8.16-150.78-62.27-9.94,1-20.06,1.52-30.34,1.52-133.13,0-241.06-86.48-241.06-193.15S151.28,46.39,284.41,46.39s241.06,86.48,241.06,193.15c0,68.66-44.71,128.94-112.07,163.19Z" fill="currentColor"/></svg>
-            <div class="externalLinkLabel">aphasia therapy online</div>
+            <div class="externalLinkLabel">aphasia therapy<br>online</div>
         </a>
         <a href="https://scholars.latrobe.edu.au/jpierce" id="latrobe" target="_blank">
             <svg viewBox="0 0 24 24">
                 <path fill="currentColor" d="M12,3L1,9L12,15L21,10.09V17H23V9M5,13.18V17.18L12,21L19,17.18V13.18L12,17L5,13.18Z" />
             </svg>
             <div class="externalLinkLabel">La Trobe<br>University profile</div>
+        </a>
+        <a href="CV.html" id="cv" target="">
+            <svg version="1.0" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 700.000000 700.000000" preserveAspectRatio="xMidYMid meet">
+                <metadata>
+                Created by potrace 1.12, written by Peter Selinger 2001-2015
+                </metadata>
+                <g transform="translate(0.000000,700.000000) scale(0.100000,-0.100000)" fill="currentcolor" stroke="none">
+                <path d="M1515 6789 c-147 -18 -297 -82 -412 -176 -113 -93 -215 -254 -256
+                -405 l-22 -83 0 -2625 0 -2625 22 -83 c67 -250 261 -460 499 -542 147 -51 99
+                -50 2154 -50 2054 0 2007 -1 2154 50 127 43 274 148 353 251 62 81 119 194
+                145 289 l23 85 0 2625 0 2625 -23 85 c-88 320 -343 538 -677 579 -110 13
+                -3852 13 -3960 0z m2135 -1044 c104 -25 197 -64 278 -118 170 -114 279 -263
+                344 -467 20 -65 23 -94 22 -220 0 -131 -3 -153 -28 -230 -33 -99 -62 -159
+                -122 -253 -24 -37 -44 -69 -44 -71 0 -2 33 -22 74 -45 303 -166 561 -483 675
+                -828 44 -134 57 -221 42 -287 -13 -59 -24 -72 -91 -107 l-45 -24 -1275 -3
+                c-1445 -3 -1330 -9 -1400 79 -52 66 -56 102 -26 229 56 239 134 399 289 594
+                110 138 294 284 453 358 68 32 73 38 49 58 -28 23 -108 161 -132 228 -71 193
+                -70 421 1 601 102 256 326 447 596 507 79 17 262 17 340 -1z m1562 -3285 c182
+                -51 182 -339 0 -390 -51 -14 -3373 -14 -3424 0 -177 49 -185 324 -11 385 32
+                12 321 14 1718 15 1126 0 1692 -4 1717 -10z m-12 -821 c98 -22 156 -104 148
+                -208 -6 -75 -32 -127 -81 -159 l-41 -27 -1726 0 -1726 0 -41 27 c-51 33 -83
+                99 -83 168 0 108 57 180 160 201 58 11 3339 10 3390 -2z"></path>
+                <path d="M3323 5330 c-104 -37 -187 -113 -240 -218 -25 -52 -28 -67 -28 -167
+                0 -103 2 -114 32 -177 64 -136 191 -224 336 -235 180 -14 330 73 410 237 30
+                61 32 72 31 170 0 92 -3 112 -27 163 -51 112 -135 190 -243 227 -75 26 -198
+                26 -271 0z"></path>
+                <path d="M3294 4105 c-237 -44 -437 -153 -600 -328 -65 -70 -186 -254 -177
+                -269 7 -13 1883 -10 1883 3 0 18 -59 118 -112 191 -68 93 -200 214 -295 271
+                -201 120 -477 172 -699 132z"></path>
+                </g>
+                </svg>
+            <div class="externalLinkLabel">CV</div>
         </a>
         <a href="mailto:cvrepr.wbua.r@tznvy.pbz" id="emaila" target="_blank">
             <?xml version="1.0" encoding="UTF-8"?>
