--- a/CV.html
+++ b/CV.html
@@ -54,16 +54,20 @@
         // When the user scrolls the page, execute myFunction
         window.onscroll = function() {stick()};
 
-        // Get the header
-        var header = document.getElementById("education");
+        // Get the headers
+        const header = document.getElementById("education");
 
         // Get the offset position of the navbar
         var sticky = header.offsetTop;
+        var stickyinset = header.offsetLeft;
+        var stickywidth = header.offsetWidth;
 
         // Add the sticky class to the header when you reach its scroll position. Remove "sticky" when you leave the scroll position
         function stick() {
         if (window.pageYOffset > sticky) {
             header.classList.add("sticky");
+            header.style.left = stickyinset+"px";
+            header.style.width = stickywidth+"px";
         } else {
             header.classList.remove("sticky");
         }
@@ -106,7 +110,11 @@
         </p>
     </div>
     <div id="content">
-        <div class="leftCol" id="education">Education</div>
+        <div class="leftCol" >
+            <div id="education">
+                Education
+            </div>
+        </div>
         <div class="rightCol">
             <p class=MsoNormal><b style='mso-bidi-font-weight:normal'><span
                 style='font-size:11.0pt;font-family:"Helvetica Neue Light";color:#262626;
@@ -147,7 +155,7 @@
                 2008 || Member of Golden Key Society<o:p></o:p></span></p>
         </div>
         <div class="leftCol">
-            Professional Experience
+            <div id="ProfessionalExperience">Professional Experience</div>
         </div>
         <div class="rightCol">
             <p class=MsoNormal style='tab-stops:83.9pt'><span class=SpellE><b
@@ -318,7 +326,7 @@
                 mso-themecolor:text1'><o:p></o:p></span></p>
         </div>
         <div class="leftCol">
-            Awards
+            <div id="Awards">Awards</div>
         </div>
         <div class="rightCol">
             <p class=MsoNormal><span class=SpellE><span style='font-size:11.0pt;
@@ -397,7 +405,7 @@
                 mso-themecolor:text1'><o:p></o:p></span></p>
         </div> -->
         <div class="leftCol">
-            Grants & Scholarships
+            <div id="GrantsScholarships">Grants & Scholarships</div>
         </div>
         <div class="rightCol">
             <p class=MsoNormal><span style='font-size:11.0pt;font-family:"Helvetica Neue Light";
@@ -527,7 +535,7 @@
                 Melbourne, VIC. ($500 - <b>successful</b>)<o:p></o:p></span></p>
         </div>
         <div class="leftCol">
-            Journal Articles
+            <div id="JournalArticles">Journal Articles</div>
         </div>
         <div class="rightCol">
             <p>
@@ -1034,7 +1042,7 @@
                 </table>
         </div>
         <div class="leftCol">
-            Book Chapters
+            <div id="BookChapters">Book Chapters</div>
         </div>
         <div class="rightCol">
             <p class=MsoNormal><span style='font-size:11.0pt;font-family:"Helvetica Neue Light";
@@ -1051,7 +1059,7 @@
                 Evidence-Based Practice across the Health Professions. Elsevier. 4th Edition.<o:p></o:p></span></p>
         </div>
         <div class="leftCol">
-            Presentations 
+            <div id="Presentations">Presentations</div> 
         </div>
         <div class="rightCol">
             <p class=MsoNormal><b><span style='font-size:11.0pt;font-family:"Helvetica Neue Light"'>Pierce,
@@ -1335,7 +1343,7 @@
                 Pathology Subacute Seminar, Melbourne, Australia.</span><o:p></o:p></span></p>
         </div>
         <div class="leftCol">
-            Conference Posters
+            <div id="Posters">Conference Posters</div>
         </div>
         <div class="rightCol" id="posters">
             <table style="width: 100%;">
@@ -1666,7 +1674,7 @@
             </table>
         </div>
         <div class="leftCol">
-            Memberships
+            <div id="Memberships">Memberships</div>
         </div>
         <div class="rightCol">
                         <p class=MsoNormal style='margin-bottom:6.0pt;text-align:justify;text-justify:
@@ -1686,7 +1694,7 @@
             Students Group<o:p></o:p></span></p>
         </div>
         <div class="leftCol">
-            Student Supervision
+            <div id="StudentSupervision">Student Supervision</div>
         </div>
         <div class="rightCol">
             <p class=MsoNormal style='margin-bottom:6.0pt;text-align:justify;text-justify:
@@ -1696,7 +1704,7 @@
             full time PhD candidates (Melbourne).<o:p></o:p></span></p>
         </div>
         <div class="leftCol">
-            Teaching
+            <div id="teaching">Teaching</div>
         </div>
         <div class="rightCol" id="teaching">
                 <p class=MsoNormal style='text-align:justify;text-justify:inter-ideograph'><span
@@ -1760,13 +1768,13 @@
                 11.0pt;font-family:"Helvetica Neue Light";color:black;mso-themecolor:text1'><o:p></o:p></span></p>
         </div>
         <div class="leftCol" style="display: none;">
-            Recent Professional Development
+            <div>Recent Professional Development</div>
         </div>
         <div class="rightCol" style="display: none;">
             
         </div>
         <div class="leftCol">
-            Certifications
+            <div id="certifications">Certifications</div>
         </div>
         <div class="rightCol">
             <p class=MsoNormal style='margin-bottom:6.0pt'><span style='font-size:11.0pt;
@@ -1777,7 +1785,7 @@
                 Good Practice accreditation.<o:p></o:p></span></p>
         </div>
         <div class="leftCol">
-            Research Impact
+            <div id="researchimpactheader">Research Impact</div>
         </div>
         <div class="rightCol" id="researchImpact">
             <p class=MsoNormal style='margin-bottom:6.0pt'><span style='font-size:11.0pt;
@@ -1861,7 +1869,7 @@
                 </table>
         </div>
         <div class="leftCol">
-            Service
+            <div id="service">Service</div>
         </div>
         <div class="rightCol">
             <p>Organising committee member for the Aphasiology Symposium of Australasia, Nov 2023.</p>
@@ -2002,7 +2010,7 @@
             Trialists workshop on creating video abstracts. 2021.<o:p></o:p></span></p>
         </div>
         <div class="leftCol">
-            Collaboration (Published papers)
+            <div id="collaboration">Collaboration (Published papers)</div>
         </div>
         <div class="rightCol">
             <img src="images/world.svg" />
